# wonder-reader-esp32

./: .gitmodules  README.md  custom_partition.csv  platformio.ini
data/: hello.txt
lib/: README
lib/liblouis/: compileTranslationTable.c  config.h  liblouis.h
lib/liblouis/tables/: Makefile
src/: main.cpp  network.cpp  network.h  routes.cpp  secret.h.example  sound.cpp  sound.h  wonderconfig.cpp  wonderconfig.h
src/bluetooth/: bluetooth.cpp  bluetooth.h
src/brailletranslate/: brailletranslation.cpp  brailletranslation.h
src/control/: braillecontrol.cpp  braillecontrol.h  keyboard.cpp  keyboard.h
src/motorcontrol/: motorcontrol.c  motorcontrol.cpp  motorcontrol.h
trash/: bluetooth.c
wonder-reader/: CMakeLists.txt
wonder-reader/components/accelstepper/: CMakeLists.txt
wonder-reader/main/: main.cpp
wonder-reader/main/braillecontrol/: CMakeLists.txt  braillecontrol.cpp
